--- a/src/app/user-management/user-details-dialog/user-details-dialog.component.html
+++ b/src/app/user-management/user-details-dialog/user-details-dialog.component.html
@@ -133,7 +133,7 @@
     @if (viewOnly() && !isDefaultUser()) {
     <button
       (click)="onEdit()"
-      *appHasPermission="editPermission"
+      *userHasPermission="editPermission"
       type="button"
       mat-flat-button
     >
