--- a/src/app/role-management/role-management.component.html
+++ b/src/app/role-management/role-management.component.html
@@ -3,27 +3,38 @@
     <h2>{{ pageTitle }}</h2>
   </div>
   <div class="d-md-flex flex-md-fill d-none"></div>
-  <div class="text-end mt-md-0 mt-2">
+  <div class="d-flex flex-md-row flex-column text-end">
     <button
-      *userHasPermission="roleReadPermission"
-      class="me-2"
+      class="mt-md-0 mt-2"
+      *userHasPermission="permissions.create"
       mat-flat-button
-      [disabled]="selected().length !== 1 || loading()"
-      (click)="viewUserRoles()"
+      [disabled]="loading()"
     >
-      <mat-icon>work_update</mat-icon>View User Roles
+      <mat-icon>add</mat-icon>Add New Role
     </button>
-    <button
-      *userHasPermission="roleManagePermission"
-      mat-flat-button
-      [disabled]="selected().length === 0 || loading()"
-      (click)="assignUserRoles()"
-    >
-      <mat-icon>work_update</mat-icon>Assign Roles
-    </button>
-
-    <!-- <button mat-flat-button><mat-icon>add</mat-icon>Add</button> -->
   </div>
+</div>
+
+<div class="d-flex flex-md-row flex-column m-3 text-end">
+  <div class="d-md-flex flex-md-fill d-none"></div>
+  <button
+    *userHasPermission="permissions.readPermissions"
+    class="me-md-2 my-md-0 me-0 mb-2"
+    mat-flat-button
+    [disabled]="selected().length !== 1 || loading()"
+  >
+    <mat-icon>work_update</mat-icon>
+    <div class="m-1">View Role Permissions</div>
+  </button>
+
+  <button
+    *userHasPermission="permissions.managePermissions"
+    class="mb-md-0 mb-2"
+    mat-flat-button
+    [disabled]="selected().length !== 1 || loading()"
+  >
+    <mat-icon>work_update</mat-icon>Assign Permissions
+  </button>
 </div>
 
 <div class="d-flex flex-row justify-content-center overflow-x-auto mx-3">
@@ -47,9 +58,5 @@
     [canDelete]="permissionService.hasPermission(permissions.delete)"
     (selectionChange)="getSelection($event)"
     (onView)="view($event)"
-    (onEdit)="edit($event)"
-    (onDelete)="delete($event)"
-    (onActivate)="activate($event)"
-    (onDeactivate)="deactivate($event)"
   ></app-table>
 </div>
