app status change, delete added

--- a/src/app/app-management/app-management.component.html
+++ b/src/app/app-management/app-management.component.html
@@ -38,5 +38,8 @@
     (selectionChange)="getSelection($event)"
     (onView)="view($event)"
     (onEdit)="edit($event)"
+    (onActivate)="activateApps($event)"
+    (onDeactivate)="deactivateApps($event)"
+    (onDelete)="deleteApps($event)"
   ></app-table>
 </div>
