--- a/src/app/permissions/permissions.component.html
+++ b/src/app/permissions/permissions.component.html
@@ -1,18 +1,38 @@
+<div class="d-flex flex-md-row flex-column m-3">
+  <div class="text-start">
+    <h2>{{ pageTitle }}</h2>
+  </div>
+  <div class="d-md-flex flex-md-fill d-none"></div>
+  <div class="d-flex flex-md-row flex-column text-end">
+    <div class="my-md-0 my-3">
+      <mat-form-field class="w-100">
+        <mat-label>App</mat-label>
+        <mat-select
+          [(value)]="selectedAppId"
+          (selectionChange)="onAppChange($event)"
+        >
+          <mat-option *ngFor="let app of appList" [value]="app.id">{{
+            app.name | formatTitle
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
+</div>
 <div class="d-flex flex-row justify-content-center">
-  @if (loading()) {
-  <app-ripple-loading-screen></app-ripple-loading-screen>
-  }@else {
+  @if (!loading()) {
   <mat-accordion class="w-100">
+    @for (header of headers; track $index) {
     <mat-expansion-panel
-      [expanded]="step() === 0"
-      (opened)="setStep(0)"
+      [expanded]="step() === $index"
+      (opened)="setStep($index)"
       hideToggle
     >
       <mat-expansion-panel-header>
-        <mat-panel-title> Home </mat-panel-title>
+        <mat-panel-title> {{ header | formatTitle }} </mat-panel-title>
       </mat-expansion-panel-header>
 
-      @for (item of permssions()?.home; track $index) {
+      @for (item of permissions[header]; track $index) {
       <mat-card class="w-100 mb-2" appearance="outlined">
         <mat-card-content>
           <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
@@ -37,287 +57,7 @@
       </mat-card>
       }
     </mat-expansion-panel>
-
-    <mat-expansion-panel
-      [expanded]="step() === 1"
-      (opened)="setStep(1)"
-      hideToggle
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title> Dashboard </mat-panel-title>
-      </mat-expansion-panel-header>
-
-      @for (item of permssions()?.dashboard; track $index) {
-      <mat-card class="w-100 mb-2" appearance="outlined">
-        <mat-card-content>
-          <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
-            <strong>Name :</strong>
-            <mat-chip>{{ item.name }}</mat-chip>
-          </mat-chip-set>
-
-          <div class="mb-2">
-            <p><strong>Description: </strong>{{ item.description }}</p>
-          </div>
-
-          <mat-chip-set
-            class="mx-2"
-            [attr.aria-label]="'Roles for ' + item.name"
-          >
-            <strong>Assigned roles :</strong>
-            @for (role of item.roleNames; track $index) {
-            <mat-chip>{{ role }}</mat-chip>
-            }
-          </mat-chip-set>
-        </mat-card-content>
-      </mat-card>
-      }
-    </mat-expansion-panel>
-
-    <mat-expansion-panel
-      [expanded]="step() === 2"
-      (opened)="setStep(2)"
-      hideToggle
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title> App Portal</mat-panel-title>
-      </mat-expansion-panel-header>
-
-      @for (item of permssions()?.appPortal; track $index) {
-      <mat-card class="w-100 mb-2" appearance="outlined">
-        <mat-card-content>
-          <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
-            <strong>Name :</strong>
-            <mat-chip>{{ item.name }}</mat-chip>
-          </mat-chip-set>
-
-          <div class="mb-2">
-            <p><strong>Description: </strong>{{ item.description }}</p>
-          </div>
-
-          <mat-chip-set
-            class="mx-2"
-            [attr.aria-label]="'Roles for ' + item.name"
-          >
-            <strong>Assigned roles :</strong>
-            @for (role of item.roleNames; track $index) {
-            <mat-chip>{{ role }}</mat-chip>
-            }
-          </mat-chip-set>
-        </mat-card-content>
-      </mat-card>
-      }
-    </mat-expansion-panel>
-
-    <mat-expansion-panel
-      [expanded]="step() === 3"
-      (opened)="setStep(3)"
-      hideToggle
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title> User Management</mat-panel-title>
-      </mat-expansion-panel-header>
-
-      @for (item of permssions()?.users; track $index) {
-      <mat-card class="w-100 mb-2" appearance="outlined">
-        <mat-card-content>
-          <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
-            <strong>Name :</strong>
-            <mat-chip>{{ item.name }}</mat-chip>
-          </mat-chip-set>
-
-          <div class="mb-2">
-            <p><strong>Description: </strong>{{ item.description }}</p>
-          </div>
-
-          <mat-chip-set
-            class="mx-2"
-            [attr.aria-label]="'Roles for ' + item.name"
-          >
-            <strong>Assigned roles :</strong>
-            @for (role of item.roleNames; track $index) {
-            <mat-chip>{{ role }}</mat-chip>
-            }
-          </mat-chip-set>
-        </mat-card-content>
-      </mat-card>
-      }
-    </mat-expansion-panel>
-
-    <mat-expansion-panel
-      [expanded]="step() === 4"
-      (opened)="setStep(4)"
-      hideToggle
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title> Role Management </mat-panel-title>
-      </mat-expansion-panel-header>
-
-      @for (item of permssions()?.roles; track $index) {
-      <mat-card class="w-100 mb-2" appearance="outlined">
-        <mat-card-content>
-          <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
-            <strong>Name :</strong>
-            <mat-chip>{{ item.name }}</mat-chip>
-          </mat-chip-set>
-
-          <div class="mb-2">
-            <p><strong>Description: </strong>{{ item.description }}</p>
-          </div>
-
-          <mat-chip-set
-            class="mx-2"
-            [attr.aria-label]="'Roles for ' + item.name"
-          >
-            <strong>Assigned roles :</strong>
-            @for (role of item.roleNames; track $index) {
-            <mat-chip>{{ role }}</mat-chip>
-            }
-          </mat-chip-set>
-        </mat-card-content>
-      </mat-card>
-      }
-    </mat-expansion-panel>
-
-    <mat-expansion-panel
-      [expanded]="step() === 5"
-      (opened)="setStep(5)"
-      hideToggle
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title> Permissions </mat-panel-title>
-      </mat-expansion-panel-header>
-
-      @for (item of permssions()?.permissions; track $index) {
-      <mat-card class="w-100 mb-2" appearance="outlined">
-        <mat-card-content>
-          <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
-            <strong>Name :</strong>
-            <mat-chip>{{ item.name }}</mat-chip>
-          </mat-chip-set>
-
-          <div class="mb-2">
-            <p><strong>Description: </strong>{{ item.description }}</p>
-          </div>
-
-          <mat-chip-set
-            class="mx-2"
-            [attr.aria-label]="'Roles for ' + item.name"
-          >
-            <strong>Assigned roles :</strong>
-            @for (role of item.roleNames; track $index) {
-            <mat-chip>{{ role }}</mat-chip>
-            }
-          </mat-chip-set>
-        </mat-card-content>
-      </mat-card>
-      }
-    </mat-expansion-panel>
-
-    <mat-expansion-panel
-      [expanded]="step() === 6"
-      (opened)="setStep(6)"
-      hideToggle
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title> App Management </mat-panel-title>
-      </mat-expansion-panel-header>
-
-      @for (item of permssions()?.apps; track $index) {
-      <mat-card class="w-100 mb-2" appearance="outlined">
-        <mat-card-content>
-          <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
-            <strong>Name :</strong>
-            <mat-chip>{{ item.name }}</mat-chip>
-          </mat-chip-set>
-
-          <div class="mb-2">
-            <p><strong>Description: </strong>{{ item.description }}</p>
-          </div>
-
-          <mat-chip-set
-            class="mx-2"
-            [attr.aria-label]="'Roles for ' + item.name"
-          >
-            <strong>Assigned roles :</strong>
-            @for (role of item.roleNames; track $index) {
-            <mat-chip>{{ role }}</mat-chip>
-            }
-          </mat-chip-set>
-        </mat-card-content>
-      </mat-card>
-      }
-    </mat-expansion-panel>
-
-    <mat-expansion-panel
-      [expanded]="step() === 7"
-      (opened)="setStep(7)"
-      hideToggle
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title> Audit Logs </mat-panel-title>
-      </mat-expansion-panel-header>
-
-      @for (item of permssions()?.auditLogs; track $index) {
-      <mat-card class="w-100 mb-2" appearance="outlined">
-        <mat-card-content>
-          <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
-            <strong>Name :</strong>
-            <mat-chip>{{ item.name }}</mat-chip>
-          </mat-chip-set>
-
-          <div class="mb-2">
-            <p><strong>Description: </strong>{{ item.description }}</p>
-          </div>
-
-          <mat-chip-set
-            class="mx-2"
-            [attr.aria-label]="'Roles for ' + item.name"
-          >
-            <strong>Assigned roles :</strong>
-            @for (role of item.roleNames; track $index) {
-            <mat-chip>{{ role }}</mat-chip>
-            }
-          </mat-chip-set>
-        </mat-card-content>
-      </mat-card>
-      }
-    </mat-expansion-panel>
-
-    <mat-expansion-panel
-      [expanded]="step() === 8"
-      (opened)="setStep(8)"
-      hideToggle
-    >
-      <mat-expansion-panel-header>
-        <mat-panel-title> Settings </mat-panel-title>
-      </mat-expansion-panel-header>
-
-      @for (item of permssions()?.settings; track $index) {
-      <mat-card class="w-100 mb-2" appearance="outlined">
-        <mat-card-content>
-          <mat-chip-set class="mx-2" [attr.aria-label]="item.name">
-            <strong>Name :</strong>
-            <mat-chip>{{ item.name }}</mat-chip>
-          </mat-chip-set>
-
-          <div class="mb-2">
-            <p><strong>Description: </strong>{{ item.description }}</p>
-          </div>
-
-          <mat-chip-set
-            class="mx-2"
-            [attr.aria-label]="'Roles for ' + item.name"
-          >
-            <strong>Assigned roles :</strong>
-            @for (role of item.roleNames; track $index) {
-            <mat-chip>{{ role }}</mat-chip>
-            }
-          </mat-chip-set>
-        </mat-card-content>
-      </mat-card>
-      }
-    </mat-expansion-panel>
+    }
   </mat-accordion>
-
   }
 </div>
