--- a/src/app/role-management/role-management.component.html
+++ b/src/app/role-management/role-management.component.html
@@ -16,6 +16,16 @@
 </div>
 
 <div class="d-flex flex-md-row flex-column m-3 text-end">
+  <div class="my-md-0 my-2">
+    <mat-form-field class="w-100">
+      <mat-label>App</mat-label>
+      <mat-select [(value)]="selectedAppId" (selectionChange)="onAppChange($event)">
+        <mat-option *ngFor="let app of appList" [value]="app.id">{{
+          app.name | formatTitle
+        }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
   <div class="d-md-flex flex-md-fill d-none"></div>
   <button
     *userHasPermission="permissions.readPermissions"
